--- a/gestion_sistema_torneos/assets/css/nuevo_maestro.css
+++ b/gestion_sistema_torneos/assets/css/nuevo_maestro.css
@@ -78,7 +78,7 @@ input[type=text] {
 	border-radius: 5px 5px 5px 5px;
   }
 
-  input[type=file] {
+  input[type=number] {
 	background-color: #f6f6f6;
 	border: none;
 	color: #0d0d0d;
