--- a/gestion_sistema_torneos/core/templates/core/nuevo_Maestro.html
+++ b/gestion_sistema_torneos/core/templates/core/nuevo_Maestro.html
@@ -6,28 +6,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Modificar Equipo</title>
+    <title>Nuevo Maestro</title>
+    
 </head>
 <body>
 
         {% block content %}
       
-        <div>
+        
         
        
-        <form action="" method="POST" enctype="multipart/form-data" >
+        <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <table>
                 {{ form.as_table }}
             </table>
-
+             
+            <input type="submit" value="Guardar">
             <input type="reset" value="Limpiar">
-             <input type="submit" value="Modificar">
+           
         </form>
 
         {{mensaje}}
 
-    </div>
 
         {% endblock %}
     
